k8s/cas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cas
  template:
    metadata:
      labels:
        app: cas
    spec:
      containers:
        - name: cas
          image: ghcr.io/cas-4/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      restartPolicy: Always
