k8s/cas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: cas
  type: ClusterIP
